Added authentication check.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,3 +25,4 @@ jobs:
       # Deploy backend via Render deploy hook
       - name: Deploy Backend to Render
         run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
+# name: CI/CD Pipeline
